remove rodmap block

--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -144,158 +144,23 @@
 				<!---End the company section-->
 				</div>
 			<div class="col-lg-7 col-md-12 model-market offset-md-1">
-				<h2 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">What does WNDR offer?</h2>
+				<h2 class="uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">What does WNDR offer?</h2>
 				<ul>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">The ability to deliver 3D immersive experiences purely via the web without a download or special hardware.</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">The ability to distribute these experiences via social media platforms, text, or email.</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experience in UnrealEngine without the need for a traditional publisher and game studio partner</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">The ability to interact with a live crowd during the experience (via text or voice chat).</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 700; repeat: true">The ability to sell physical or virtual goods, including NFTs, directly from the immersive setting.</li>
-					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">Unlimited potential to create vast hyper-realistic open-worlds, games and experiences</li>
+					<li class="uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">Unlimited potential to create vast hyper-realistic open-worlds, games and experiences</li>
 				</ul>
-				<h2 class="mdl-hdng uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Model:</h2>
-				<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">WNDR’s cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experiencesin UnrealEngine without the need for a traditional publisher and game studio partner. Our technology democratizes distribution and powers premium Metaverse experiences creating new business models for brands, creators and virtual entrepreneurs.</p>
-				<h2 class="mdl-hdng uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 100; repeat: true">Market:</h2>
-				<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">WNDR is poised to become a leader in the delivery of social 3D experiences online via a traditional web browser. We are reinventing online content delivery to bridge the gap between the 200M hardcore gamers and the 3B Internet users based upon our belief that everyone wants web-based content to be more engaging and entertaining...with WNDR, Everyone Plays.</p>
+				<h2 class="mdl-hdng uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Model:</h2>
+				<p class="uk-scrollspy-invie mb-4"  uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">WNDR’s cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experiencesin UnrealEngine without the need for a traditional publisher and game studio partner. Our technology democratizes distribution and powers premium Metaverse experiences creating new business models for brands, creators and virtual entrepreneurs.</p>
+				<h2 class="mdl-hdng uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 100; repeat: true">Market:</h2>
+				<p class="uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">WNDR is poised to become a leader in the delivery of social 3D experiences online via a traditional web browser. We are reinventing online content delivery to bridge the gap between the 200M hardcore gamers and the 3B Internet users based upon our belief that everyone wants web-based content to be more engaging and entertaining...with WNDR, Everyone Plays.</p>
 			</div>
 		</div>
 	</div>
 <!----End About Us---->	
-<div class="roadmap-center-line">
-	<img src="{% static 'img/rdmp-line.png' %}" alt="rdmp-line">
-</div>
-<section class="home-testimonial main_about_testimonail">
-<div class="container-fluid">
-<div class="roadmap-tablet-view">
-	<img src="{% static 'img/roadm-tab.png' %}" alt="roadm-tab">
-</div>
-<div class="roadmap-desktop-section">
-<div class="container roadmap-section">
-	<div class="row">
-		<div class="col-lg-12 col-md-12">
-			<h2 class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Roadmap</h2>
-		</div>
-	</div>
-</div>
-<div class="container tp-spcng-rdmp">
-	<div class="row">
-		<div class="col-lg-5 col-md-5 lft-rdmp-line">
-			<div class="roadmp-frst">
-				<div class="road-mp-icon">
-					<p>Road Map</p>
-				</div>
-				<p class="rdmp-bg"><span>Roadmap</span></p>
-				<h2><span>WNDR :</span> WNDR.LAND</h2>
-				<p>Metaverse | Cloud Gaming </p>
-				<p>NFT Drops | 3D Assets</p>
-				<p>Hyper-real Avatars</p>
-				<p>Virtual Concerts | Ad Tech</p>
-				<p>Live Meta Events | AAA Game Experience</p>
-				<p class="lgt-blb-mvmnt"><span>Light Bulb moment : </span>When our first web-based casual game went viral in 2009, we quickly came to understand the untapped potential of web games to capture a massive and engaged audience.  “Wall Street Massacre: Murder Madoff” garnered 23 million gameplays in three months and sparked the development of what would become WNDR.
-				</p>
-			</div>	
-			<div class="rdmp-phase-tw">
-				<div class="wndr-ph-tw">
-					<p>02</p>
-				</div>
-				<p class="rdmp-phtw"><span>Phase 02</span></p>
-				<h2><span>WNDR.com | ORIGINS</span> ADDITIONAL GAMING EXPERIENCES SHOWCASE THE EXPANSION OF THE WNDR.LAND DIGITAL WORLD </h2>
-				<h2>STATUS <span></span>IN DEVELOPMENT<span>>>></span></h2>
-				<div class="key-objectv-phasetw">
-					<h4>Key Objectivess </h4>
-					<ul>
-						<li>Provide Introduction to WNDR.Land experience</li>
-						<li>Showcase Realtime Meta Mini Event w/ AAA Game Quality</li>
-						<li>Support 2-8 player cloud native gameplay</li>
-						<li>Feature MetaHuman Integration</li>
-						<li>Support Live In-Game NFT Drops</li>
-					</ul>	
-				</div>
-			</div>
-			<div class="rdmp-phase-fr">
-				<div class="rd-mp-icon">
-					<p>04</p>
-				</div>
-				<p class="rdmp-phtw"><span>Phase 04</span></p>
-				<h2><span>WNDR.com </span>OPEN WORLD</h2> 
-					<h2 class="bulid_out_txt">BUILD OUT & DEVELOPMENT OF VIRTUAL OPEN WORLD TECHNOLOGY THAT EXPANDS THE PLAYABLE UNIVERSE OF WNDR.
-					</h2>
-					<h2>STATUS<span></span>PLANNING<span>>>></span></h2>
-				<div class="key-objectv-phasetw">
-					<h4>Key Objectivess </h4>
-					<ul>
-						<li>Virtual real estate pre-sales</li>
-						<li>Metahuman | AVATAR Fashion Marketplace</li>
-						<li>Mass scale MetaHuman NFT development/customization</li>
-						<li>Real time In Game Broadcast of Mass scale Interactive events</li>
-						<li>Virtual concerts and Games pipeline</li>
-						<li>Extend brand partnerships</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-2 col-md-2 text-center rdmp-cntr">
-			<img src="{% static 'img/road-map-cntr-img.png' %}" alt="road-map-cntr">
-		</div>
-		<div class="col-lg-5 col-md-5 rygt-rdmp-line">
-			<div class="phse-cloud-gmng">
-				<div class="cloud-gaming">
-					<p>01</p>
-				</div>
-				<p class="rdmp-phase"><span>Phase 01</span></p>
-				<h2>WNDR CLOUD GAME STUDIO</h2>
-				<div class="wndr-pltfrm">
-					<p class="pltfrm-wb">LAUNCH TITLE | THE COLOSSEUM</p>
-					<p class="pltfrm-wb">3D MULTIPLAYER IMMERSIVE BATTLE EXPERIENCE</p>
-					<p class="pltfrm-wb">POWERED BY WNDR.STREAM TECHNOLOGY</p>
-					<p class="status_cmplete"><Span>STATUS</Span><span> </span>Complete<span> >>></span></p>
-				</div>
-				<h4>Key Objectivess </h4>
-				<ul>
-					<li>Design and develop cloud streaming engine</li>
-					<li>Unreal Engine 4 | Unity | Open source gaming engines </li>
-					<li>Support IOS Android PC Smart TV Play</li>
-					<li>Deliver AAA quality experience while bypassing app stores</li>
-					<li>Develop capability to deliver immersive games with a simple web link</li>
-					<li>Create a branded P.O.C with partner organization (A&E Truck Night in America)</li>
-				</ul>
-			</div>
-			<div class="enhance-phase">
-				<div class="cloud-expand desktp-phase wndrexpnd-enhnce">
-					<p>03</p>
-				</div>
-				<p class="rdmp-phase"><span>Phase 03</span></p>
-				<h2><span>WNDR.com | EXPAND & ENHANCE</span></h2>
-				<div class="wndr-pltfrm">
-					<p class="pltfrm-wb">CREATION OF FURTHER EXPERIENCES EXPANDING THE WORLD OF WNDR.</p>
-					<h2 class="pling-txt">STATUS <span><<<</span>PLANNING<span>>>></span></h2>
-				</div>
-				<h4>Key Objectivess </h4>
-				<ul>
-					<li>Expand development team</li>
-					<li>Development of multiple mini game experiences</li>
-					<li>Community Building</li>
-					<li>Influencer Marketing </li>
-					<li>Blockchain integration | WNDR Coin | IDO | Pre-sale /AirDrop</li>
-					<li>Mass scale backend distribution development</li>
-				</ul>
-			</div>
-			<div class="enhance-phase enhnce-phce-fv">
-				<div class="cloud-expand desktp-phase">
-					<p>05</p>
-				</div>
-				<p class="rdmp-phase"><span>Phase 05</span></p>
-				<h2>Welcome to the <span>WNDR</span> verse</h2>
-				<p class="pltfrm-wb">SDK Solution for 3rd party devs to create connected metaverse experiences in unreal & unity powred by wndr.stream and distributed via the web with a single click.</p>
-				<h2 class="road_map_status">STATUS <span><<<</span> PLANNING<span> >>></span></h2>
-				<h4>Key Objectivess </h4>
-				<ul>
-					<li>Public release of WNDR.LAND blockchain based open world</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</div>
 </div>
 <!--tblet section-->
 <div class="roadmap-tablet-section">
@@ -590,13 +455,13 @@ function myFunction() {
 	}
 </script> 
 
-	<script>
+ <script>
 		$(document).ready(function(){
 		  $(document).mouseleave(function(){
 			  $("#exampleModal").modal("show");
 		  });
 	  });
-	  </script>
+	  </script> 
 <script>
 
 		$(function() {  
