--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
    <link rel="stylesheet" type="text/css" href="{% static 'css/test.css' %}">
-   <!-- font awsome -->
+   <!-- font awsome -->3
    <script src="https://use.fontawesome.com/b197abb434.js"></script>
    <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
    
@@ -55,6 +55,9 @@
     
 </head>
 <body>
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PR4XX4G"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- oncontextmenu="return false" -->
    <!-- banner -->
    <div class="mobilelandscapeview" style="position:relative;">
@@ -232,10 +235,8 @@
                    </div>
                </div>
            </footer>
-           <!-- footer close here-->
+           <!-- footer close here--> 
            <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PR4XX4G"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
            <!-- jquery -->
            <script src="{% static 'js/jquery.js' %}"></script>
@@ -244,42 +245,53 @@
            <script src="{% static 'js/slick.js' %}"></script>
            <script src="{% static 'js/slick.min.js' %}"></script>
            <script>
-               $('.gallery-slider-outer').slick({
-                   dots: true,
-                   infinite: false,
-                   speed: 300,
-                   slidesToShow: 1,
-                   slidesToScroll: 1,
-                   responsive: [
-                       {
-                           breakpoint: 1023,
-                           settings: {
-                               slidesToShow: 1,
-                               slidesToScroll: 1,
-                               infinite: true,
-                               dots: true
-                           }
-                       },
-                       {
-                           breakpoint: 600,
-                           settings: {
-                               slidesToShow: 1,
-                               slidesToScroll: 1
-                           }
-                       },
-                       {
-                           breakpoint: 480,
-                           settings: {
-                               slidesToShow: 1,
-                               slidesToScroll: 1
-                           }
-                       }
-                   ]
-               });
+            $(document).ready(function(){
+
+                $('.gallery-slider-outer').slick({
+                    dots: true,
+                    infinite: false,
+                    speed: 300,
+                    slidesToShow: 1,
+                    slidesToScroll: 1,
+                    responsive: [
+                        {
+                            breakpoint: 1023,
+                            settings: {
+                                slidesToShow: 1,
+                                slidesToScroll: 1,
+                                infinite: true,
+                                dots: true
+                            }
+                        },
+                        {
+                            breakpoint: 600,
+                            settings: {
+                                slidesToShow: 1,
+                                slidesToScroll: 1
+                            }
+                        },
+                        {
+                            breakpoint: 480,
+                            settings: {
+                                slidesToShow: 1,
+                                slidesToScroll: 1
+                            }
+                        }
+                    ]
+                });
+ 
+            }) 
+           
+            
+       
+	  
+
+        
+             
            </script>
            <!-- bootstrap js -->
            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-           <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -701,7 +713,7 @@
                     $("#myVideo2").each(function () {
                         if (isInView($(this)[0])) {                    // visible?
                             if ($(this)[0].paused) $(this)[0].pause();
-                            console.log("---0-9-9-9")   // play if not playing
+                         
                         }
                         else {
                             if (!$(this)[0].paused) $(this)[0].pause();  // pause if not paused
@@ -727,7 +739,7 @@
                     $("#myVideo").each(function () {
                         if (isInView($(this)[0])) {
                             if ($(this)[0].paused) $(this)[0].pause();
-                            console.log("---0-9-9-9")
+                           
                         }
                         else {
                             if (!$(this)[0].paused) $(this)[0].pause();
