--- a/templates/contact.html
+++ b/templates/contact.html
@@ -227,7 +227,7 @@
 	<!-- form design end -->
 	<!-- footer start here -->
 	<footer>
-		<div class="footer_WNDR remove_saveimage">
+		<div class="footer_WNDR remove_saveimage" id="remv-xtra-bckgrnd-of-footr">
 			<div class="footer-overlap">
 				<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
 				<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile"
@@ -398,13 +398,13 @@
 					return false;
 				})
 			</script>
-			 <script>
+ <script>
 				$(document).ready(function(){
 				  $(document).mouseleave(function(){
 					  $("#exampleModal").modal("show");
 				});
 			  });
-			  </script> 
+			  </script>
 			     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
