--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -153,10 +153,10 @@
 				<ul>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">The ability to deliver 3D immersive experiences purely via the web without a download or special hardware.</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">The ability to distribute these experiences via social media platforms, text, or email.</li>
-					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experience in UnrealEngine without the need for a traditional publisher and game studio partner</li>
+					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">Cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experience in UnrealEngine without the need for a traditional publisher and game studio partner.</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">The ability to interact with a live crowd during the experience (via text or voice chat).</li>
 					<li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 700; repeat: true">The ability to sell physical or virtual goods, including NFTs, directly from the immersive setting.</li>
-					<li class="uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">Unlimited potential to create vast hyper-realistic open-worlds, games and experiences</li>
+					<li class="uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">Unlimited potential to create vast hyper-realistic open-worlds, games and experiences.</li>
 				</ul>
 				<h2 class="mdl-hdng uk-scrollspy-inview mb-4" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">Model:</h2>
 				<p class="uk-scrollspy-invie mb-4"  uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">WNDR’s cloud streaming technology enables small teams to create and monetize high-end AAA-quality game experiencesin UnrealEngine without the need for a traditional publisher and game studio partner. Our technology democratizes distribution and powers premium Metaverse experiences creating new business models for brands, creators and virtual entrepreneurs.</p>
@@ -167,131 +167,11 @@
 	</div>
 <!----End About Us---->	
 </div>
-<!--tblet section-->
-<div class="roadmap-tablet-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 col-sm-12 roadmap-hdng">
-				<h2>Roadmap</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-3 col-sm-3 col-xs-3 lft-roadmap-tab">
-					<div class="road-mp-tablet">
-						<img src="{% static 'img/roadmap-center-tab.png' %}" alt="tabs-line-center" class="tabs-line-center" src="lines">
-						<img src="{% static 'image/roadmap-line-center-mobile.png' %}" class="mobile-line-center" src="lines">
-					</div>
-			</div>
-			<div class="col-md-9 col-sm-9 col-xs-9 spcng-rygt-cntnt">
-					<div class="rodmap-tablet-content">
-						<div class="rdmp-tab-icon">
-							<p>Road<br> Map</p>
-						</div>
-						<p class="rdmp-btn-tab"><span>Roadmap</span></p>
-						<h2><span>WNDR:</span> WNDR.LAND</h2>
-						<p>Metaverse | Cloud Gaming </p>
-						<p>NFT Drops | 3D Assets</p>
-						<p>Hyper-real Avatars</p>
-						<p>Virtual Concerts | Ad Tech</p>
-						<p>Live Meta Events | AAA Game Experience</p>
-						<p class="lgt-blb-mvment"><span>Light Bulb moment :</span> When our first web-based casual game went viral in 2009, we quickly came to understand the untapped potential of web games to capture a massive and engaged audience.  “Wall Street Massacre: Murder Madoff” garnered 23 million gameplays in three months and sparked the development of what would become WNDR. </p>
-					</div>
-					<div class="rodmap-tablet-cloudgaming">
-						<div class="phase-stcn-gaming">
-							<p>01</p>
-						</div>
-						<p class="rdmp-cloudgaming-tab"><span>Phase 01</span></p>
-						<h2><span class="wndr-tb-cld">WNDR Cloud Gaming</span> Platform |3D Web<span><<<</span>Complete<span>>>></span></h2>
-						<div class="wndr-pltfrm">
-							<p class="pltfrm-wb">LAUNCH TITLE | THE COLOSSEUM</p>
-							<p class="pltfrm-wb">3D MULTIPLAYER IMMERSIVE BATTLE EXPERIENCE</p>
-							<p class="pltfrm-wb">POWERED BY WNDR.STREAM TECHNOLOGY</p>
-							<p class="status_cmplete"><Span>STATUS</Span><span> <<<</span>Complete<span> >>></span></p>
-						</div>
-						<p class="ky-objectve">Key Objectivess</p>
-						<ul>
-							<li>Design and develop cloud streaming engine</li>
-							<li>Unreal Engine 4 | Unity | Open source gaming engines </li>
-							<li>Support IOS Android PC Smart TV Play</li>
-							<li>Deliver AAA quality experience while by passing app stores</li>
-							<li>Develop capability to deliver immersive games with a simple web link </li>
-							<li>Create a branded P.O.C with partner organization (A&E Truck Night in America)</li>
-						</ul>
-					</div>
-					<div class="rodmap-tablet-cloudgaming">
-						<div class="phase-exprnce-gaming">
-							<p>02</p>
-						</div>
-						<p class="rdmp-phasetw-tab"><span>Phase 02</span></p>
-						<h2><span class="wndr-tb-exp">WNDR.LAND | ORIGINS </span> ADDITIONAL GAMING EXPERIENCES SHOWCASE THE EXPANSION OF THE WNDR.LAND DIGITAL WORLD
-							STATUS <span class="road_map_status">  </span>IN DEVELOPMENT<span> >>> </span>
-							 </h2>
-						<p class="ky-strmng">Key Objectivess</p>
-						<ul>
-							<li>Provide Introduction to WNDR.Land experience</li>
-							<li>Showcase Realtime Meta Mini Event w/ AAA Game Quality</li>
-							<li>Support 2-8 player cloud native gameplay</li>
-							<li>Feature MetaHuman Integration</li>
-							<li>Support Live In-Game NFT Drops</li>
-						</ul>
-						<p class="cmplt-txt"><span></span>Line Items Above are Complete<span>>>></span></p>
-					</div>
-					<div class="rodmap-tablet-cloudgaming">
-						<div class="phase-stcn-gaming expnd-ehance-sectn">
-							<p>03</p>
-						</div>
-						<p class="rdmp-cloudgaming-tab"><span>Phase 03</span></p>
-						<h2><span class="wndr-tb-cld">WNDR.LAND |</span>  EXPAND & ENHANCE</span></h2>
-						<p class="ky-objectve">CREATION OF FURTHER EXPERIENCES EXPANDING THE WORLD OF WNDR.</p>
-						<h2 class="road_map_status">STATUS <span> </span>PLANNING<span></span> >>></span></h2>
-						<ul>
-							<li>Expand development team</li>
-							<li>Development of multiple mini game experiences</li>
-							<li>Community Building</li>
-							<li>Influencer Marketing </li>
-							<li>Blockchain integration | WNDR Coin | IDO | Pre-sale /AirDrop</li>
-							<li>Mass scale backend distribution development</li>
-						</ul>
-					</div>
-					<div class="rodmap-tablet-cloudgaming">
-						<div class="phase-exprnce-gaming">
-							<p>04</p>
-						</div>
-						<p class="rdmp-phasetw-tab"><span>Phase 04</span></p>
-						<h2><span class="wndr-tb-exp">WNDR.LAND | </span>OPEN WORLD </h2>
-							<h2 class="bulid_out_txt">BUILD OUT & DEVELOPMENT OF VIRTUAL OPEN WORLD TECHNOLOGY THAT EXPANDS THE PLAYABLE UNIVERSE OF WNDR.</h2>
-						<p class="ky-objectve">STATUS <Span>  </Span>PLANNING<span> >>> </span></p>
-						<p class="ky-strmng">Key Objectivess</p>
-						<ul>
-							<li>Virtual real estate pre-sales</li>
-							<li>Metahuman | AVATAR Fashion Marketplace</li>
-							<li>Mass scale MetaHuman NFT development/ customization</li>
-							<li>Real time In Game Broadcast of Mass scale Interactive events</li>
-							<li>Virtual concerts and Games pipeline</li>
-							<li>Extend brand partnerships</li>
-						</ul>
-					</div>
-					<div class="rodmap-tablet-cloudgaming">
-						<div class="phase-stcn-gaming verse-wlcm">
-							<p>05</p>
-						</div>
-						<p class="rdmp-cloudgaming-tab"><span>Phase 05</span></p>
-						<h2>Welcome to the<span class="wndr-tb-cld"> WNDR</span> verse</h2>
-						<p class="ky-objectve">SDK Solution for 3rd party devs to create connected metaverse experiences in unreal & unity powred by wndr.stream and distributed via the web with a single click.</p>
-						<p class="ky-objectve">STATUS <span><<<</span>PLANNING<span>>>></span></p>
-						<p class="ky-objectve mbl_key_objctv_btm">Key Objectivess</p>
-						<ul>
-							<li>Public release of WNDR.LANDvblockchain based open world.</li>
-						</ul>
-					</div>
-			</div>
-		</div>
-	</div>
-</div>
+
 </div>
 <!-- footer start here -->
 <footer>
-	<div class="footer_WNDR remove_saveimage">
+	<div class="footer_WNDR remove_saveimage" id="custom-about-us-footer">
 		<div class="footer-overlap">
 			<img src="{% static 'image/footer-line-top.png' %}" class="top-line" alt="footer1">
 			<img src="{% static 'image/footer-line-top-mobile.png' %}" class="top-line-m0bile"
@@ -456,13 +336,13 @@ function myFunction() {
 	}
 </script> 
 
- <script>
+ {% comment %} <script>
 		$(document).ready(function(){
 		  $(document).mouseleave(function(){
 			  $("#exampleModal").modal("show");
 		  });
 	  });
-	  </script> 
+	  </script>  {% endcomment %}
 <script>
 
 		$(function() {  
