--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
    <meta property="og:title" content="Best Browser Games | Play Free Online Games  - WNDR.com" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://wndr.com" />
-   <meta property="og:image:url" content="{% static 'image/share_link_img.jpeg' %}" />
+   <meta property="og:image:url" content="{% static 'static/image/share_link_img.jpeg' %}" />
    <meta property="og:description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games." />
-   <meta property="og:image" content="{% static 'image/share_link_img.jpeg' %}" />
+   <meta property="og:image" content="{% static 'static/image/share_link_img.jpeg' %}" />
    <!-- slick css -->
    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
    <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
