--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-   <title>Play Premium AAA MetaVerse games on any device - Mobile, PC & Smart TV’s -No Downloads.</title>
+   <title>Play Premium AAA MetaVerse games on any device - No Downloads</title>
    <meta charset="utf-8">
    <meta name="description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games.">
    
