--- a/templates/home.html
+++ b/templates/home.html
@@ -83,7 +83,7 @@
 	<!-- banner -->
 	<button onclick="topFunction()" id="myBtntop" title="Go to top"><i class='fa fa-angle-up'></i></button>
 	<!-- About-WNDR-start -->
-	<div class="about-WNDR content" id="content">
+	<div class="about-WNDR content home_top_hdng" id="content">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -184,7 +184,7 @@
 	</section> 
 	<!-- Image gallery-end -->
 	<!-- WNDRLAND-WNDR-start -->
-	<div class="WNDRLAND-WNDR"> 
+	<div class="WNDRLAND-WNDR Wndr_verse_mbl"> 
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
