--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
    <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
    <!-- bootstrap-css start -->
-   {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"> {% endcomment %}
+   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <!-- link css -->
@@ -286,7 +286,7 @@
            </script>
            <!-- bootstrap js -->
            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+           <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -900,17 +900,6 @@ return false;
                 console.log("-----")
         });
         });
-</script>
-
-<script>
-    $(document).ready(function({
-        $('.arrow').click(function () {
-            $('html, body').animate({scrollTop:$(document).height()}, 'slow');
-            return false;
-        });
-        
-
-    }))
 </script>
 
  </div>
