changes in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -366,13 +366,13 @@
                    });
                }
                /*-----End vision poster image----*/
-               {% comment %} $(document).ready(function () {
+                $(document).ready(function () {
                    var x = $('#myVideo');
                    x.controls = true;
                    x.load();
  
-               }); {% endcomment %}
-               {% comment %} $(function () {
+               }); 
+             $(function () {
                    $('a[href=#]').click(function () {
                        if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
                            var target = $(this.hash);
@@ -385,7 +385,7 @@
                            }
                        }
                    });
-               }); {% endcomment %}
+               }); 
                var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
                $("#load-image-of-modal-subscibe1").hide()
                function myFunction1() {
