chnges in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -366,7 +366,7 @@
                    });
                }
                /*-----End vision poster image----*/
-                $(document).load(function () {
+                $(document).ready(function () {
                    var x = $('#myVideo');
                    x.controls = true;
                    x.load();
