--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,10 @@
    <link rel="stylesheet" type="text/css" href="{% static 'css/test.css' %}">
    <!-- font awsome -->
    <script src="https://use.fontawesome.com/b197abb434.js"></script>
-   <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
-   
+   <script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script> 
    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10997461539"></script> 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
    <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -239,7 +240,7 @@
            <!-- Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
            <!-- jquery -->
-           <script src="{% static 'js/jquery.js' %}"></script>
+            <script src="{% static 'js/jquery.js' %}"></script>
            <!-- jquery -->
            <!-- slick js -->
            <script src="{% static 'js/slick.js' %}"></script>
@@ -285,9 +286,10 @@
              
            </script>
            <!-- bootstrap js -->
-           <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-           <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-               integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+       
+                     
+
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                crossorigin="anonymous"></script>
@@ -377,12 +379,15 @@
                    if(email.length == 0){
                     document.getElementById("error_div1").hidden = false;
                     document.getElementById("error1").innerHTML = "Please Enter Email"
-                    $("#error_div1").show().delay(3000).fadeOut();        
+                    {% comment %} $("#error_div1").show().delay(3000).fadeOut();         {% endcomment %}
+                    $("#error_div1").show();
+                    setTimeout( "$('#error_div1').hide();", 4000);
+
                  }
                    else if (testEmail.test(email)) {
                        $("#load-image-of-modal-subscibe1").show()
                        console.log("abc")
-                       $.ajax({
+                       $jq.ajax({
                            type: "POST",
                            data: {
                                "email": email,
@@ -393,14 +398,18 @@
                                if (data.is_taken == true) {
                                 console.log("email already taken");
                                 document.getElementById("invalid_div1").hidden = false;
-                                document.getElementById("invalid1").innerHTML = "Email Already Exists"
-                                $("#invalid_div1").show().delay(3000).fadeOut();
+                                document.getElementById("invalid1").innerHTML = "Email Already Exists";
+                                $("#invalid_div1").show();
+                                setTimeout( "$('#invalid_div1').hide();", 4000);
+                                {% comment %} $("#invalid_div1").show().delay(3000).fadeOut(); {% endcomment %}
+                                
                               }
                               else{
                                 document.getElementById("sucess_div1").hidden = false;
                                 document.getElementById("sucess1").innerHTML = "Thank you for subscribing"
                                 $('#myInput1').val('');
-                                $("#sucess_div1").show().delay(3000).fadeOut();
+                                $("#sucess_div1").show();
+                                setTimeout( "$('#sucess_div1').hide();", 4000);
                                 $("#btn-d1").attr("disabled", false);
                                 
                                 function gtag_report_conversion(url) {
@@ -426,28 +435,34 @@
                            },
                        });
                    }
-                   else {
+                    else {
                       document.getElementById("error_div1").hidden = false;
                       document.getElementById("error1").innerHTML = "Invalid Email"
-                      $("#error_div1").show().delay(3000).fadeOut();
-                  }
-               }
-               var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
+                      $("#error_div1").show();
+                      setTimeout( "$('#error_div1').hide();", 4000);
+  
+                    
+                  };
+               };
+                var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
                $("#load-image").hide()
                function myFunction2() {
                    email = $('#myInput2').val();
                    console.log("Arrivals-----1")
                    console.log(email)
                    if (email.length == 0){
+                    
                     document.getElementById("error_div2").hidden = false;
-                    document.getElementById("error2").innerHTML = "Please Enter Email"
-                    $("#error_div2").show().delay(3000).fadeOut();                  
+                    document.getElementById("error2").innerHTML = "Please Enter Email";
+                    $("#error_div2").show();
+                    {% comment %} setTimeout( function(){$('error_div2').hide();} , 4000); {% endcomment %}
+                    setTimeout( "$('#error_div2').hide();", 4000);
                    }
                    else if (testEmail.test(email)) {
-                       $("#load-image").show()
+                       $("#load-image").show();
                       
-                       console.log("----")
-                       $.ajax({
+                       console.log("----");
+                       $jq.ajax({
                            type: "POST",
                            data: {
                                "email": email,
@@ -460,14 +475,17 @@
                                 console.log("email already taken");
                                 document.getElementById("invalid_div2").hidden = false;
                                 document.getElementById("invalid2").innerHTML = "Email Already Exists"
-                                $("#invalid_div2").show().delay(3000).fadeOut();
+                                $("#invalid_div2").show()
+                                {% comment %} setTimeout( function(){$('invalid_div2').hide();} , 4000); {% endcomment %}
+                                setTimeout( "$('#invalid_div2').hide();", 4000);
                                 
                               }
                               else{
                                 document.getElementById("sucess_div2").hidden = false;
                                 document.getElementById("sucess2").innerHTML = "Thank you for subscribing"
                                 $('#myInput2').val('');
-                                $("#sucess_div2").show().delay(3000).fadeOut();
+                                $("#sucess_div2").show();
+                                setTimeout( "$('#sucess_div2').hide();", 4000);
                                 $("#btn-d2").attr("disabled", false);
                                 function gtag_report_conversion(url) {
                                     console.log('after gtag conversion');
@@ -494,7 +512,11 @@
                    }else {
                     document.getElementById("error_div2").hidden = false;
                     document.getElementById("error2").innerHTML = "Invalid Email"
-                    $("#error_div2").show().delay(3000).fadeOut();
+                    $("#error_div2").show();
+                    setTimeout( "$('#error_div2').hide();", 4000);
+                    
+                    {% comment %} setTimeout( function(){$('error_div2').hide();} , 4000); {% endcomment %}
+                   
                 }
                }
                $("#load-image-of-arrival2").hide()
@@ -505,13 +527,16 @@
                    if (email.length == 0){                
                   document.getElementById("error_div3").hidden = false;
                   document.getElementById("error3").innerHTML = "Please Enter Email"
-                  $("#error_div3").show().delay(3000).fadeOut();               
+                  {% comment %} $("#error_div3").show().delay(3000).fadeOut();    {% endcomment %}
+                  $("#error_div3").show()
+                  setTimeout( "$('#error_div3').hide();", 4000);
+                
                  }
                    else if (testEmail.test(email)) {
                        $("#load-image-of-arrival2").show()
                       
                        console.log("abc")
-                       $.ajax({
+                       $jq.ajax({
                            type: "POST",
                            data: {
                                "email": email,
@@ -523,13 +548,17 @@
                                 console.log("email already taken","00---00");
                                 document.getElementById("invalid_div3").hidden = false;
                                 document.getElementById("invalid3").innerHTML = "Email Already Exists"
+                                
+                                $("#invalid_div3").show();
+                                setTimeout( "$('#invalid_div3').hide();", 4000);
                                
                               }
                               else{
                                 document.getElementById("sucess_div3").hidden = false;
                                 document.getElementById("sucess3").innerHTML = "Thank you for subscribing"
                                 $('#myInput3').val('');
-                              
+                                $("#sucess_div3").show();
+                                setTimeout( "$('#sucess_div3').hide();", 4000);
                                 $("#btn-d3").attr("disabled", false);
                                 
                         
@@ -541,6 +570,8 @@
                    else {
                       document.getElementById("error_div3").hidden = false;
                       document.getElementById("error3").innerHTML = "Invalid Email"
+                      $("#error_div3").show();
+                      setTimeout( "$('#error_div3').hide();", 4000);
                      
                   }
                }
@@ -838,23 +869,7 @@ return false;
     })
   </script> 
 
-  <script>
-        $(window).bind("load", function() {  
-        var load_video= $("#vid2_source").attr('src')
-        console.log(load_video)
-        $('.movie-area').load(load_video);
-        })
- 
-</script>
- <script>
-    $(window).bind("load", function() {  
-          var load_video= $("#vid21_source").attr('src')
-          $('.movie-area').load(load_video);
-          console.log("-----")
 
-      });
- 
-</script> 
 
 {% comment %} <script>
     $(window).bind("load", function() {  
