--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+/* 11/22 CSS START HERE */
+.about-content h1 {
+    font-size: 50px;
+    padding-top: 60px;
+}
+/* 11/22 CSS close HERE */
+
 /* footer manu start here */
 ul.middle_unorderList li:nth-child(1) {
     margin-left: 0 !important;
@@ -24,11 +31,11 @@ ul.middle_unorderList {
     top: auto;
     bottom: 0;
 }
-ul.middle_unorderList li {
-    width: 96px;
-}
 ul.middle_unorderList li a:before {
     background: unset !important;
+}
+.footer_WNDR ul.middle_unorderList li {
+    margin-left: 30px;
 }
 /* footer manu close here */
 
@@ -765,10 +772,16 @@ video::-webkit-media-controls {
     width: 100%;
     height: 100%;
     display: block;
+    min-height: 100%;
+    max-height: 100%;
+    float: left;
+    box-shadow: inset 0 0 17px #9a0c09;
+    border-radius: 14px;
+    padding:0px 25px;
 }
 
-.abt_top_btm_section:before {
-    background: url(../image/bg_line_tp.png);
+/* .abt_top_btm_section:before {
+    background: url(../image/aboutus-border.svg);
     position: absolute;
     content: " ";
     left: -39px;
@@ -777,13 +790,22 @@ video::-webkit-media-controls {
     height: 100%;
     background-repeat: no-repeat;
     background-size: contain;
+} */
+.roadmap_company_section{
+    border: 2px solid #c4adac;
+    border-radius: 20px;
+    box-shadow: 0 0 6px #af302d;
+    width: 100%;
+    height: 100%;
+    float: left;
+    display: block;
 }
 
-.abt_top_btm_section:after {
+/* .abt_top_btm_section:after {
     background: url(../image/btm_line.png);
     position: absolute;
-    content: " ";
-    right: 0px;
+    /* content: " "; */
+    /* right: 0px;
     bottom: -21px;
     width: 496px;
     height: 100%;
@@ -791,10 +813,10 @@ video::-webkit-media-controls {
     left: -40px;
     background-size: contain;
     background-position: bottom;
-}
+} */ */
 
 
-.roadmap_company_section:before {
+/* .roadmap_company_section:before {
     background: url(../image/min.png);
     position: absolute;
     content: " ";
@@ -804,7 +826,7 @@ video::-webkit-media-controls {
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 
 .roadmap_company_section p {
     position: relative;
@@ -821,7 +843,7 @@ video::-webkit-media-controls {
     z-index: 6;
 }
 
-.roadmap_company_section:after {
+/* .roadmap_company_section:after {
     background: url(../image/min.png);
     position: absolute;
     content: " ";
@@ -831,10 +853,10 @@ video::-webkit-media-controls {
     height: 100%;
     background-repeat: no-repeat;
     /* left: 100%; */
-    background-size: cover;
+    /* background-size: cover;
     background-position: right;
     z-index: 0;
-}
+} */ */
 
 /*------The company section Start-------*/
 
@@ -1049,6 +1071,9 @@ video::-webkit-media-controls {
     border: 1px solid #ff8900;
     box-shadow: 1px 1px 3px #ff8900;
     transition: all 2s;
+    display: block;
+    width: 220px;
+    margin: 0 auto;
 }
 
 .cmpny_bkgrnd:before {
@@ -2403,6 +2428,7 @@ h2 {
     font-size: 22px;
     line-height: 38px;
     font-weight: 400;
+    padding-bottom: 10px;
 }
 
 .cmpny-bg img {
@@ -2423,6 +2449,7 @@ h2 {
     font-weight: 600;
     padding-top:0px;
     margin-bottom:6px !important;
+    text-align: left;
 }
 
 .model-market p {
@@ -2436,7 +2463,7 @@ h2 {
     font-size: 18px;
     line-height: 23px;
     color: #e8e8e8;
-    padding-bottom: 10px;
+    padding-bottom: 17px;
 }
 
 .model-market {
@@ -3235,7 +3262,19 @@ h2 {
 .hide_mbl_vision {
     display: none;
 }
-
+@media (max-width: 1024px) and (min-width: 1024px) {
+    .abt_top_btm_section:after{
+    width: 368px !important;
+    }
+    .abt_top_btm_section:before {
+    width: 367px;
+    }    
+    }
+/* @media (max-width: 1023px) and (min-width: 1005px) {
+    .abt_top_btm_section:after{
+    width: 362px;
+    }
+} */
 
 /*--Roadmap page End----*/
 @media only screen and (min-width: 2048px) {}
@@ -5711,7 +5750,18 @@ img.blog-section-img-tabs {
         font-size: 25px;
         margin-bottom: 22px;
     }
-
+    .cmpny-bg h2 {
+        font-size: 40px;
+    }
+    .abt_top_btm_section p {
+        font-size: 18px !important;
+    } 
+    .model-market ul li {
+        font-size: 19px;
+    }
+    .model-market ul li {
+        padding-bottom: 23px;
+    }   
     #exampleModal .modal-dialog {
         max-width: 860px;
         margin: 1.75rem auto;
@@ -6232,6 +6282,12 @@ img.blog-section-img-tabs {
     .model-market p{
         font-size: 18px;
         line-height: 30px;
+    }
+    .teams_seprate_section {
+        border-bottom: 1px dashed #464646;
+        padding-bottom: 30px;
+        margin-bottom: 20px;
+        height: 75%;
     }
     /* 17 */
     h2.uk-scrollspy-inview {
@@ -7792,9 +7848,6 @@ img.blog-section-img-tabs {
     .banner-WNDR-outer {
         top: 344px !Important;
     }
-    ul.middle_unorderList li {
-        width: 67px;
-    }
     ul.middle_unorderList li a {
         font-size: 13px !important;
     }
@@ -8614,7 +8667,15 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 1024px) {
-    
+    .abt_top_btm_section{
+        padding: 0px 20px;
+    }
+    .abt_top_btm_section:before{
+        width: 365px;
+    }
+    .Wndr_verse_mbl h2.uk-scrollspy-inview{
+        margin-bottom: 10px;
+    }
     /* srikant css */
     .team_member_section {
         height: 540px;
@@ -8793,13 +8854,32 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 992px) {
-    /* 17 */
+    /* 11/22 css start*/
+    .footer_WNDR ul.middle_unorderList li {
+        margin-left: 26px !important;
+    } 
+    .Wndr_verse_mbl h2.uk-scrollspy-inview{
+        margin-bottom: 0px;
+    }
+    .about-content h1 {
+        font-size: 34px;
+        line-height: 26px;
+        padding-top: 40px;
+        margin-bottom: 0px;
+    } 
+    .teams_seprate_section {
+        height: 75%;
+    }
+    /* 11/22 css close */
+    
+    
     .middle_unorderList li a {
         text-align: left !important;
     }
-    .middle_unorderList li {
+    /* .middle_unorderList li {
         margin: 0 !important;
-    }
+    } */
+
     h2.uk-scrollspy-inview {
         font-size: 40px;
         margin-bottom: 30px;
@@ -8895,7 +8975,7 @@ img.blog-section-img-tabs {
 
     .abt_top_btm_section:after {
         width: 100%;
-        left: -1px;
+        left: -2px;
         bottom: -26px;
     }
 
@@ -9166,6 +9246,7 @@ img.blog-section-img-tabs {
     .about-heading h1 {
         text-align: center;
         font-size: 30px;
+        margin-top: 10px;
     }
 
     .newsletter-bg .alert.alert-danger {
@@ -9569,9 +9650,9 @@ img.blog-section-img-tabs {
 
     /*about start*/
     .about-WNDR-outer h2 {
-        font-size: 30px;
+        font-size: 34px;
         line-height: 26px;
-        padding-top: 30px;
+        padding-top: 40px;
     }
 
     .line-about img {
@@ -10056,7 +10137,9 @@ img.blog-section-img-tabs {
     .WNDR-btn-item1 {
         margin-top: 0px;
     }
-    
+    .back_to_mode {
+        top: 70px;
+    }
     .arrow-wrap {
         position: absolute;
         /* left: 40%;
@@ -10416,6 +10499,11 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 820px) and (min-width: 819px) {
+    .abt_top_btm_section:after {
+        width: 101%;
+        left: -4px;
+    }
+  
 /* 22 */
 .mobilelandscapeview {
     display: none !important;
@@ -10689,6 +10777,8 @@ img.blog-section-img-tabs {
         font-size: 30px;
         line-height: 26px;
         padding-top: 30px;
+        margin-bottom: 0px;
+        padding-top:40px;
     }
 
     .line-about img {
@@ -11459,7 +11549,7 @@ img.blog-section-img-tabs {
         color: #131418;
         padding: 0 22px;
         margin-bottom: 0px;
-        margin-top: 12px;
+        margin-top: 18px;
     }
 
     .about-WNDR-outer {
@@ -11483,7 +11573,7 @@ img.blog-section-img-tabs {
     .about-WNDR-outer h2 {
         font-size: 30px;
         line-height: 26px;
-        padding-top: 30px;
+        /* padding-top: 30px; */
     }
 
     .line-about img {
@@ -12398,7 +12488,7 @@ img.blog-section-img-tabs {
     }
     ul.middle_unorderList {
         display: inline-flex;
-        padding-left: 160px;
+        padding-left: 93px;
         margin-bottom: 30px;
     }
     /* 22 */
@@ -12725,23 +12815,25 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 767px) {
+    /* 11/22 css start here */
+    ul.middle_unorderList {
+        padding-left: 0;
+    }
+    .about-content h1 {
+        font-size: 24px;
+        line-height: 26px;
+        padding-top: 27px;
+    } 
+    /* 11/22 css close here */
     /* 18 */
     .sbscribe-bg h4 {
         font-size: 20px;
     }
     ul.middle_unorderList {
-    position: absolute;
-    top: 0;
-    right: -170px;
-    display: inline-flex;
-}
+        display: inline-flex;
+    }
     ul.middle_unorderList li a {
         text-align: center !important;
-    }    
-    
-    
-    .about-content h1.uk-scrollspy-inview {
-        font-size: 20px !important;
     }
     .model-market p {
         text-align: center;
@@ -12751,6 +12843,9 @@ img.blog-section-img-tabs {
     h2.uk-scrollspy-inview {
         font-size: 26px;
         margin-bottom: 20px;
+        padding-bottom: 0px;
+        margin-bottom: 6px !important;
+        text-align:center;
     }
     
     /* 17 */
@@ -14495,10 +14590,11 @@ img.blog-section-img-tabs {
 
     .model-market {
         padding: 50px 0px;
+        padding-top: 60px;
     }
 
     .model-market ul {
-        padding-top: 10px;
+        padding-top: 4px;
     }
 
     /*------the company section------*/
@@ -14617,6 +14713,9 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 570px) {
+    .footer_WNDR ul.middle_unorderList li {
+        margin-left: 16px !important;
+    }    
     .bnnr_img img {
         width: 100% !important;
     }
@@ -14754,6 +14853,12 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 480px) {
+    .Wndr_verse_mbl {
+        padding-top: 35px;
+    }
+    .about-WNDR-outer{
+        padding-bottom: 50px !IMPORTANT;
+    }
     .vision-lineas.vision_top_lineas img {
         display: block !important;
     }
@@ -16005,8 +16110,15 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 380px) {
+    .cmpny-bg h2 {
+        padding-top: 40px;
+    }
     ul.middle_unorderList li a{
         font-size:13px !important;
+    }
+    .about-content h1 {
+        font-size: 20px;
+        line-height: 22px;
     }
     .form-wndr-outer.company_section_about {
         padding-top: 35px;
@@ -16469,7 +16581,11 @@ img.blog-section-img-tabs {
 
     /*-----the company section-----*/
 }
-
+/* @media only screen and (max-width: 375px) {
+    .roadmap_company_section:before {
+     left: 7px;
+    }
+} */
 @media screen and (max-width: 363px) {
     .cmpny-bg h2 {
         padding-top: 40px;
@@ -16510,22 +16626,20 @@ img.blog-section-img-tabs {
 }
 
 @media screen and (max-width: 322px) {
+    .footer_WNDR ul.middle_unorderList li {
+        margin-left: 16px !important;
+    }
     .wndr_engine h2 {
         font-size: 18px;
-    }
-    ul.middle_unorderList li {
-        width: 60px;
     }
     ul.middle_unorderList li a {
         font-size: 10px !important;
         text-align: center !important;
     }
     ul.middle_unorderList {
-    position: absolute;
-    top: 0;
-    right: -150px;
-    display: inline-flex;
-}
+        display: inline-flex;
+        margin-right: 24px;
+    }
 
     .wndr_engine p {
         font-size: 13px !IMPORTANT;
@@ -16576,7 +16690,67 @@ img.blog-section-img-tabs {
 .mobilelandscapeview {
     display: none;
 }
-
+@media only screen and (max-width: 1370px) and (min-width:1319px){
+    .abt_top_btm_section:before {
+    width: 405px;
+    }
+    .abt_top_btm_section:after {
+    width: 406px;
+    }
+}
+@media only screen and (max-width: 1320px) and (min-width:1280px){
+    .abt_top_btm_section:after {
+    width: 384px;
+    }
+    .abt_top_btm_section:before {
+    width: 384px;
+    }
+}
+@media only screen and (max-width: 1281px) and (min-width:1236px){
+    .abt_top_btm_section:after{
+	width: 415px;
+	}
+	.abt_top_btm_section:before{
+	width: 414px;
+	}
+}
+@media only screen and (max-width: 1257px) and (min-width:1237px){
+    .abt_top_btm_section:after {
+    width: 409px;
+    }
+    .abt_top_btm_section:before {
+    width: 407px;
+    }
+}
+@media only screen and (max-width: 1200px) and (min-width:1201px){
+.abt_top_btm_section:after {
+    width: 393px;
+}
+.abt_top_btm_section:before {
+    width: 392px;
+}
+}
+@media only screen and (max-width: 1050px) and (min-width:1024px){
+    .roadmap_company_section {
+    width: 91% !Important;
+    }
+}
+@media only screen and (max-width: 1004px) and (min-width:992px){
+    .abt_top_btm_section:before {
+    width: 355px;
+    }
+    .abt_top_btm_section:after {
+    width: 356px;
+    }
+}
+@media only screen and (max-width: 992px) and (min-width:992px){
+    .abt_top_btm_section:before {
+    width: 276px;
+    }
+    .abt_top_btm_section:after {
+    width: 276px;
+    }
+}
 @media only screen and (max-width: 600px) and (orientation:landscape) {
     .mobileportraitview {
         display: none !important;
