--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
 	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
+	
 	<!-- fav icon -->
 	<link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 
@@ -49,37 +49,42 @@
 	
 	<!-- Modal -->
 	<div class="mobileportraitview">
-	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content sbscribe-bg">
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			  <div class="modal-content sbscribe-bg">
 				<div class="modal-header">
 					<div class="modal-outer">
-						<h2>Subscribe to Our Newsletter</h2>
-						<img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
-						<img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs"
-							alt="subscribe-line-tabs">
-						<p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
-						<form method="post" onsubmit="return false;">
-							<div class="sbscribe_btn_input">
-								<span>
-									<input type="email" name="myInput" required id="myInput" value=""
-										placeholder="Enter email">
-								</span>
-							</div>
-							<div class="alert alert-danger sueccs-msg contact-error" id="sucess_div" role="alert"
-								hidden>
-								<span id="sucess" class="contact-error"></span>
-							</div>
-							<div class="sbscribe-section" id="success_btn">
-								<button class="sbt-btn" id="btn-d" onclick="subscribe()">Submit</button>
-							</div>
-						</form>
+				  <h4>Subscribe to Our Newsletter</h4>
+				  <img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc" alt="newsletter-line">
+				  <img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs" alt="newsletter-line1">
+				  <p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
+		  
+					<form method="post" onsubmit="return false;">
+					  <div class="sbscribe_btn_input">
+						<span>
+							<input type="text" name="myInput1"  id="myInput1" value="" placeholder="Enter email">
+						</span>
+						</div>
+					  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
+						<span id="sucess1" ></span>
+					  </div>
+					  <div class="alert alert-danger invalid-sueccs-msg" id="invalid_div1" role="alert" hidden>
+						<span id="invalid1" ></span>
 					</div>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					  <div class="alert alert-danger error-msg" id="error_div1" role="alert" hidden>
+						<span id="error1" ></span>
+					  </div>
+					  <div class="sbscribe-section">
+						<button class="sbt-btn" id="btn-d1" onclick="myFunction1()">Submit 	 <div id ="load-image-of-modal-subscibe1" class="spinner-border text-danger" role="status">
+							<span class="sr-only">Loading...</span>
+						  </div></button>
+					  </div>
+				  </div>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
+			  </div>
 			</div>
-		</div>
-	</div>
+		  </div>
 	<!--Modal ending here-->
 	<div class="contact-section-bg">
 		<!-- header start here -->
@@ -306,9 +311,83 @@
 		crossorigin="anonymous"></script>
 	<!-- bootstrap js -->
 	<script>
+			var testEmail = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;  
+					   $("#load-image-of-modal-subscibe1").hide()
+					   function myFunction1() {
+						   email = $('#myInput1').val();
+						   console.log("Arrivals-----0")
+						   console.log(email)
+						   if(email.length == 0){
+							document.getElementById("error_div1").hidden = false;
+							document.getElementById("error1").innerHTML = "Please Enter Email"
+							{% comment %} $("#error_div1").show().delay(3000).fadeOut();         {% endcomment %}
+							$("#error_div1").show();
+							setTimeout( "$('#error_div1').hide();", 4000);
+		
+						 }
+						   else if (testEmail.test(email)) {
+							   $("#load-image-of-modal-subscibe1").show()
+							   console.log("abc")
+							   $.ajax({
+								   type: "POST",
+								   data: {
+									   "email": email,
+									   'csrfmiddlewaretoken': '{{csrf_token}}'
+								   },
+								   success: function (data) {
+									   $("#load-image-of-modal-subscibe1").hide()
+									   if (data.is_taken == true) {
+										console.log("email already taken");
+										document.getElementById("invalid_div1").hidden = false;
+										document.getElementById("invalid1").innerHTML = "Email Already Exists";
+										$("#invalid_div1").show();
+										setTimeout( "$('#invalid_div1').hide();", 4000);
+										{% comment %} $("#invalid_div1").show().delay(3000).fadeOut(); {% endcomment %}
+										
+									  }
+									  else{
+										document.getElementById("sucess_div1").hidden = false;
+										document.getElementById("sucess1").innerHTML = "Thank you for subscribing"
+										$('#myInput1').val('');
+										$("#sucess_div1").show();
+										setTimeout( "$('#sucess_div1').hide();", 4000);
+										$("#btn-d1").attr("disabled", false);
+										
+										function gtag_report_conversion(url) {
+											console.log('after gtag conversion');
+											var callback = function () {
+											  if (typeof(url) != 'undefined') {
+												console.log('inside error');
+												window.location = url;
+												
+											  }
+											};
+											gtag('event', 'conversion', {
+												'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so',
+												'event_callback': callback
+											});
+											return false;
+										  }
+										  gtag_report_conversion();
+										console.log('after script conversion');
+									 
+									  }
+									  
+								   },
+							   });
+						   }
+							else {
+							  document.getElementById("error_div1").hidden = false;
+							  document.getElementById("error1").innerHTML = "Invalid Email"
+							  $("#error_div1").show();
+							  setTimeout( "$('#error_div1').hide();", 4000);
+		  
+							
+						  };
+					   };
 	</script>
 	<script>
-		function subscribe() {
+		{% comment %} function subscribe() {
 			console.log("Arrival-2")
 			email = $('#myInput').val();
 			console.log(email)
@@ -330,7 +409,7 @@
 					},
 				});
 			}
-		}
+		} {% endcomment %}
 		function myFunction() {
 			console.log("abc")
 			email = $('#Input').val();
@@ -421,6 +500,7 @@
 			});
 			});
 	</script>
+
 
 </body>
 
