--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,7 @@
 				<div class="col-md-12">
 					<div class="about-WNDR-outer">
 					<div class="about-content"> 
-						<h1 style="padding-top:60px ; font-size:50px;" class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">WELCOME TO <span>WNDR</span></h1>
+						<h1  class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">WELCOME TO <span>WNDR</span></h1>
 							<div class="line-about uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
 								<img src="{% static 'image/About-line2.png' %}" alt="wndrland_lineAbout">
 							</div>
@@ -348,5 +348,8 @@
 			</div>
 		</div> 
 	</section>
+
+
+	
 	<!-- Subscribe newsletter End -->
 {% endblock %}
