--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Best Browser Games | Contact Us  - WNDR.com</title>
 	<meta name="description" content="If you have any queries related to game play or login, then you can contact us. We are committed to providing you with the best services.">
@@ -19,6 +19,13 @@
 	<!-- font awsome -->
 	<script src="https://use.fontawesome.com/b197abb434.js"></script>
 	<script src="https://kit.fontawesome.com/1086841b1d.js" crossorigin="anonymous"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date()); 
+	
+		gtag('config', 'AW-10997461539');
+		</script>
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
@@ -70,7 +77,7 @@
 					  </div>
 					  <div class="alert alert-danger invalid-sueccs-msg" id="invalid_div1" role="alert" hidden>
 						<span id="invalid1" ></span>
-					</div>
+					  </div>
 					  <div class="alert alert-danger error-msg" id="error_div1" role="alert" hidden>
 						<span id="error1" ></span>
 					  </div>
@@ -79,12 +86,14 @@
 							<span class="sr-only">Loading...</span>
 						  </div></button>
 					  </div>
-				  </div>
-				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-			  </div>
-			</div>
-		  </div>
+				      </div>
+				     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				     </div>
+					</form>
+			        </div>
+			    </div>
+		</div>
+
 	<!--Modal ending here-->
 	<div class="contact-section-bg">
 		<!-- header start here -->
@@ -329,6 +338,7 @@
 							   $("#load-image-of-modal-subscibe1").show()
 							   console.log("abc")
 							   $.ajax({
+									url:"{% url 'home' %}",
 								   type: "POST",
 								   data: {
 									   "email": email,
@@ -352,7 +362,6 @@
 										$("#sucess_div1").show();
 										setTimeout( "$('#sucess_div1').hide();", 4000);
 										$("#btn-d1").attr("disabled", false);
-										
 										function gtag_report_conversion(url) {
 											console.log('after gtag conversion');
 											var callback = function () {
@@ -370,6 +379,8 @@
 										  }
 										  gtag_report_conversion();
 										console.log('after script conversion');
+
+
 									 
 									  }
 									  
@@ -477,7 +488,7 @@
 					return false;
 				})
 			</script>
- <script>
+ 			<script>
 				$(document).ready(function(){
 				  $(document).mouseleave(function(){
 					  $("#exampleModal").modal("show");
