--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -22,6 +22,13 @@
 	  <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date()); 
+
+    gtag('config', 'AW-10997461539');
+    </script>
 
    <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -287,6 +294,7 @@
                        $("#load-image-of-modal-subscibe1").show()
                        console.log("abc")
                        $.ajax({
+						   url:"{% url 'home' %}",
                            type: "POST",
                            data: {
                                "email": email,
@@ -311,7 +319,7 @@
                                 setTimeout( "$('#sucess_div1').hide();", 4000);
                                 $("#btn-d1").attr("disabled", false);
                                 
-                                function gtag_report_conversion(url) {
+								function gtag_report_conversion(url) {
                                     console.log('after gtag conversion');
                                     var callback = function () {
                                       if (typeof(url) != 'undefined') {
@@ -320,9 +328,14 @@
                                         
                                       }
                                     };
-                                
-                
+                                    gtag('event', 'conversion', {
+                                        'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so',
+                                        'event_callback': callback
+                                    });
+                                    return false;
                                   }
+                                  gtag_report_conversion();
+                                console.log('after script conversion');
                                
                              
                               }
@@ -362,13 +375,13 @@
 	}
 </script> 
 
- {% comment %} <script>
+  <script>
 		$(document).ready(function(){
 		  $(document).mouseleave(function(){
 			  $("#exampleModal").modal("show");
 		  });
 	  });
-	  </script>  {% endcomment %}
+	  </script>
 <script>
 
 		$(function() {  
