--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
    <link rel="canonical" href="https://wndr.com" />
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
    <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
-   <meta property="og:title" content="Play Web3 AAA Multiplayer games on Mobile PC and Smart TV’s with any browser and on any device With no downloads.">
+   <meta property="og:title" content="Play Web3 AAA Multiplayer games on Mobile PC and Smart TV’s with any browser and on any device With no downloads."/>
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://wndr.com" />
    <meta property="og:image:url" content="https://wndr.com/static/static/image/share_link_img.jpeg" />
